--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": {
+          "@type": "Question",
+          "name": "pregunta de prueba",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "respuesta de prueba"
+          }
+        }
+      }
+      </script>
+    <title>Schemas SEO</title>
   </head>
   <body>
     <div id="root"></div>
