--- a/index.html
+++ b/index.html
@@ -1,9 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./public/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "Pregunta de prueba 1 LOREM",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Lorem ipsum dolor sit amet consectetur adipisicing elit. In sint labore doloribus. Nisi possimus, porro cupiditate vitae quos optio, reprehenderit non eligendi, expedita sint dolore odio cum harum modi inventore.Incidunt necessitatibus modi, dolore aspernatur hic explicabo eaque vero dolores in iure delectus! Debitis sit dolore doloribus rerum voluptates, cupiditate suscipit, reiciendis culpa enim laboriosam aspernatur ad nihil repudiandae aut. At laboriosam optio quod molestiae voluptates earum totam exercitationem eius quam in esse pariatur aperiam, porro hic mollitia, nostrum quis quibusdam, animi nobis Reprehenderit laudantium nulla quos! Animi, distinctio dicta. Vel neque voluptates."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Pregunta de prueba 2 LOREM",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Nisi possimus, porro cupiditate vitae quos optio, reprehenderit non eligendi, expedita sint dolore odio cum harum modi inventore.Incidunt necessitatibus modi, dolore aspernatur hic explicabo eaque vero dolores in iure delectus! Debitis sit dolore doloribus rerum voluptates, cupiditate suscipit, reiciendis culpa enim laboriosam aspernatur ad nihil repudiandae aut."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Pregunta de prueba 3 LOREM",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Nisi possimus, porro cupiditate vitae quos optio, reprehenderit non eligendi, expedita sint dolore odio cum harum modi inventore.Incidunt necessitatibus modi, dolore aspernatur hic explicabo eaque vero dolores in iure delectus! Debitis sit dolore doloribus rerum voluptates, cupiditate suscipit, reiciendis culpa enim laboriosam aspernatur ad nihil repudiandae aut."
+            }
+          }
+        ]
+      }
+    </script>
     <title>Schemas SEO</title>
   </head>
   <body>
